fixed spacing

--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -209,6 +209,15 @@
     }
   }
 
+  &.threeStepSection {
+    h1 {
+      border-bottom: solid 2px _palette(bg);
+      padding-top: 40px;
+      text-align: center;
+      padding-bottom: 32px;
+    }
+  }
+
   @include breakpoint("<=medium") {
     margin: _size(wrapper-edges, medium) 0;
 
