--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -90,9 +90,9 @@
 }
 
 .threeStepProcessHeading {
-  padding-top: 40px;
-  font-size: x-large;
-  text-align: center;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #threeStepContactButton {
